# nhs111-triage-clustering

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/interim/: ValidationGroups_RefTable.xlsx
notebooks/: exploration.ipynb
src/: main.py
src/nhs111_triage/: config.py
